# 3r2-ros-real-robot-v2

./: .gitattributes  README.md
Arduino/: README.md
Arduino/MainControllerTeensy/: README.md  platformio.ini
Arduino/MainControllerTeensy/lib/ODriveArduino_modified/: ODriveArduino.cpp  ODriveArduino.h
Arduino/MainControllerTeensy/lib/rosserial_arduino_lib_modified/: ArduinoHardware.h
Arduino/MainControllerTeensy/lib/rosserial_arduino_lib_modified/ros/: node_handle.h
Arduino/MainControllerTeensy/src/: main.cpp
CAD/: 3R2_ROS_Real_Robot_v2_v1.f3z  README.md  ros_real_robot_v2_v1.f3z
KiCad/: README.md
KiCad/ControlPanelConnections/: ControlPanelConnections.sch  MyLibrary.dcm  MyLibrary.lib
ROS/: README.md
ROS/jetson_camera/: README.md
ROS/jetson_camera/src/: jetson_camera_nodelet.cpp
ROS/ros_imu_bno055/: README.md
ROS/ros_imu_bno055/src/: imu_ros.py
ROS/ros_real_robot_v2/ros_real_robot_v2/: CMakeLists.txt  package.xml
ROS/ros_real_robot_v2/ros_real_robot_v2_bringup/: CMakeLists.txt  package.xml
ROS/ros_real_robot_v2/ros_real_robot_v2_bringup/camera_info/: raspicam_hq.yaml  raspicam_v2.yaml
ROS/ros_real_robot_v2/ros_real_robot_v2_bringup/launch/: core.launch  imu.launch  lidar.launch  model.launch  remote.launch  robot.launch  rpi_cameras.launch
ROS/ros_real_robot_v2/ros_real_robot_v2_bringup/launch/includes/: description.launch
ROS/ros_real_robot_v2/ros_real_robot_v2_bringup/param/: ekf_localization.yaml
ROS/ros_real_robot_v2/ros_real_robot_v2_description/: CMakeLists.txt  package.xml
ROS/ros_real_robot_v2/ros_real_robot_v2_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
ROS/ros_real_robot_v2/ros_real_robot_v2_description/meshes/: base_scan.stl  bno055.stl  camera_front.stl  camera_rear.stl  caster_front.stl  caster_rear.stl  rplidar.stl  wheel_left.stl  wheel_right.stl
ROS/ros_real_robot_v2/ros_real_robot_v2_description/rviz/: model.rviz
ROS/ros_real_robot_v2/ros_real_robot_v2_description/urdf/: materials.gazebo.xacro  materials.urdf.xacro  physics.gazebo.xacro  plugins.gazebo.xacro  ros_real_robot_v2.urdf.trans  ros_real_robot_v2.urdf.xacro
ROS/ros_real_robot_v2/ros_real_robot_v2_navigation/: CMakeLists.txt  package.xml
ROS/ros_real_robot_v2/ros_real_robot_v2_navigation/launch/: amcl.launch  move_base.launch  navigation.launch
ROS/ros_real_robot_v2/ros_real_robot_v2_navigation/maps/: apartment1.pgm  apartment1.yaml
ROS/ros_real_robot_v2/ros_real_robot_v2_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
ROS/ros_real_robot_v2/ros_real_robot_v2_navigation/rviz/: gmapping.rviz  navigation.rviz
ROS/ros_real_robot_v2/ros_real_robot_v2_slam/: CMakeLists.txt  package.xml
ROS/ros_real_robot_v2/ros_real_robot_v2_slam/config/: gmapping_params.yaml
ROS/ros_real_robot_v2/ros_real_robot_v2_slam/launch/: gmapping.launch  slam.launch
ROS/ros_real_robot_v2/ros_real_robot_v2_slam/rviz/: gmapping.rviz
ROS/ros_real_robot_v2/ros_real_robot_v2_teleop/: CMakeLists.txt  package.xml  setup.py
ROS/ros_real_robot_v2/ros_real_robot_v2_teleop/launch/: key.launch
ROS/ros_real_robot_v2/ros_real_robot_v2_teleop/nodes/: ros_real_robot_v2_teleop_key
ROS/ros_real_robot_v2/ros_real_robot_v2_utils/: CMakeLists.txt  package.xml
ROS/ros_real_robot_v2/ros_real_robot_v2_utils/launch/: imu_calibration.launch  view_imu.launch
ROS/ros_real_robot_v2/ros_real_robot_v2_utils/src/: cmd_vel_odom_test0.py  nav_timed.py
ROS/ros_real_robot_v2_simulations/ros_real_robot_v2_gazebo/: CMakeLists.txt  package.xml
ROS/ros_real_robot_v2_simulations/ros_real_robot_v2_gazebo/launch/: empty_world.launch  turtlebot3_house.launch
ROS/ros_real_robot_v2_simulations/ros_real_robot_v2_gazebo/models/mailbox/materials/textures/: Mailbox_Diffuse.tga.orig
ROS/ros_real_robot_v2_simulations/ros_real_robot_v2_simulations/: CMakeLists.txt  package.xml
ROS/rosserial/: README.md
ROS/rplidar_ros/: README.md
Scripts/fusion2urdf-20220426/: README.md
Scripts/fusion2urdf-20220426/Example/: Basic_Robot.f3d
Scripts/fusion2urdf-20220426/Example/Basic_Robot_description/: package.xml
Scripts/fusion2urdf-20220426/Example/Basic_Robot_description/meshes/: base_link.stl
Scripts/fusion2urdf-20220426/URDF_Exporter/: URDF_Exporter.manifest  URDF_Exporter.py
Scripts/fusion2urdf-20220426/URDF_Exporter/core/: Joint.py  Link.py  Write.py
Scripts/fusion2urdf-20220426/URDF_Exporter/package/: CMakeLists.txt  package.xml
Scripts/fusion2urdf-20220426/URDF_Exporter/package/rviz/: display.rviz
Scripts/fusion2urdf-20220426/URDF_Exporter/utils/: utils.py
