<?xml version="1.0" ?>
<package format="2">
    <name>ros_real_robot_v2_description</name>
    <version>2.0.0</version>
    <description>The ros_real_robot_v2_description package</description>
    <license>MIT</license>
    <author email="ovidiu.rosu90@gmail.com">Ovidiu Rosu</author>
    <maintainer email="ovidiu.rosu90@gmail.com">Ovidiu Rosu</maintainer>
    <url type="website">http://ovidiurosu.com/</url>
    <url type="repository">https://github.com/ovidiurosu90/3r2-ros-real-robot-v2.git</url>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>urdf</depend>
    <depend>xacro</depend>
</package>
