<?xml version="1.0"?>
<package format="2">
    <name>ros_real_robot_v2_gazebo</name>
    <version>2.0.0</version>
    <description>Gazebo simulation package for the ROS Real Robot v2</description>
    <license>Apache 2.0</license>
    <author email="ovidiu.rosu90@gmail.com">Ovidiu Rosu</author>
    <maintainer email="ovidiu.rosu90@gmail.com">Ovidiu Rosu</maintainer>
    <url type="website">http://ovidiurosu.com/</url>
    <url type="repository">https://bitbucket.org/orosu/3r2_ros_real_robot_v2/</url>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf</depend>
    <depend>gazebo_ros</depend>
    <exec_depend>gazebo</exec_depend>
    <exec_depend>ros_real_robot_v2_description</exec_depend>
</package>

